SpanishParser/src/parser/general/GeneraleParser.java
package parser.general;

// Generated from GeneraleParser.g4 by ANTLR 4.5.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class GeneraleParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.5.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		TestoNomeSezione=1, EnterSezione=2, ExitSezione=3, EnterInfo=4, ExitInfo=5, 
		TestoInformazione=6, SkipInformazione=7, EnterCollegamento=8, ExitCollegamento=9, 
		CollegamentoImage=10, CollegamentoTestoGenerico=11, SkipCollegamento=12, 
		Grassetto=13, Corsivo=14, CorsivoGrassetto=15, Elenco=16, NEWLINE=17, 
		Text=18;
	public static final int
		RULE_contenuto = 0, RULE_informazione = 1, RULE_collegamento = 2, RULE_image = 3, 
		RULE_testo = 4, RULE_elenco = 5, RULE_grassetto = 6, RULE_corsivo = 7, 
		RULE_corsivoGrassetto = 8;
	public static final String[] ruleNames = {
		"contenuto", "informazione", "collegamento", "image", "testo", "elenco", 
		"grassetto", "corsivo", "corsivoGrassetto"
	};

	private static final String[] _LITERAL_NAMES = {
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, "TestoNomeSezione", "EnterSezione", "ExitSezione", "EnterInfo", 
		"ExitInfo", "TestoInformazione", "SkipInformazione", "EnterCollegamento", 
		"ExitCollegamento", "CollegamentoImage", "CollegamentoTestoGenerico", 
		"SkipCollegamento", "Grassetto", "Corsivo", "CorsivoGrassetto", "Elenco", 
		"NEWLINE", "Text"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "GeneraleParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public GeneraleParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ContenutoContext extends ParserRuleContext {
		public List<TestoContext> testo() {
			return getRuleContexts(TestoContext.class);
		}
		public TestoContext testo(int i) {
			return getRuleContext(TestoContext.class,i);
		}
		public List<InformazioneContext> informazione() {
			return getRuleContexts(InformazioneContext.class);
		}
		public InformazioneContext informazione(int i) {
			return getRuleContext(InformazioneContext.class,i);
		}
		public List<CollegamentoContext> collegamento() {
			return getRuleContexts(CollegamentoContext.class);
		}
		public CollegamentoContext collegamento(int i) {
			return getRuleContext(CollegamentoContext.class,i);
		}
		public List<ElencoContext> elenco() {
			return getRuleContexts(ElencoContext.class);
		}
		public ElencoContext elenco(int i) {
			return getRuleContext(ElencoContext.class,i);
		}
		public List<GrassettoContext> grassetto() {
			return getRuleContexts(GrassettoContext.class);
		}
		public GrassettoContext grassetto(int i) {
			return getRuleContext(GrassettoContext.class,i);
		}
		public List<CorsivoContext> corsivo() {
			return getRuleContexts(CorsivoContext.class);
		}
		public CorsivoContext corsivo(int i) {
			return getRuleContext(CorsivoContext.class,i);
		}
		public List<CorsivoGrassettoContext> corsivoGrassetto() {
			return getRuleContexts(CorsivoGrassettoContext.class);
		}
		public CorsivoGrassettoContext corsivoGrassetto(int i) {
			return getRuleContext(CorsivoGrassettoContext.class,i);
		}
		public ContenutoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_contenuto; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GeneraleParserListener ) ((GeneraleParserListener)listener).enterContenuto(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GeneraleParserListener ) ((GeneraleParserListener)listener).exitContenuto(this);
		}
	}

	public ContenutoContext contenuto() throws RecognitionException {
		ContenutoContext _localctx = new ContenutoContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_contenuto);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(25); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				setState(25);
				switch (_input.LA(1)) {
				case NEWLINE:
				case Text:
					{
					setState(18);
					testo();
					}
					break;
				case EnterInfo:
					{
					setState(19);
					informazione();
					}
					break;
				case EnterCollegamento:
					{
					setState(20);
					collegamento();
					}
					break;
				case Elenco:
					{
					setState(21);
					elenco();
					}
					break;
				case Grassetto:
					{
					setState(22);
					grassetto();
					}
					break;
				case Corsivo:
					{
					setState(23);
					corsivo();
					}
					break;
				case CorsivoGrassetto:
					{
					setState(24);
					corsivoGrassetto();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(27); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << EnterInfo) | (1L << EnterCollegamento) | (1L << Grassetto) | (1L << Corsivo) | (1L << CorsivoGrassetto) | (1L << Elenco) | (1L << NEWLINE) | (1L << Text))) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class InformazioneContext extends ParserRuleContext {
		public TerminalNode EnterInfo() { return getToken(GeneraleParser.EnterInfo, 0); }
		public TerminalNode ExitInfo() { return getToken(GeneraleParser.ExitInfo, 0); }
		public List<TerminalNode> TestoInformazione() { return getTokens(GeneraleParser.TestoInformazione); }
		public TerminalNode TestoInformazione(int i) {
			return getToken(GeneraleParser.TestoInformazione, i);
		}
		public InformazioneContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_informazione; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GeneraleParserListener ) ((GeneraleParserListener)listener).enterInformazione(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GeneraleParserListener ) ((GeneraleParserListener)listener).exitInformazione(this);
		}
	}

	public InformazioneContext informazione() throws RecognitionException {
		InformazioneContext _localctx = new InformazioneContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_informazione);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(29);
			match(EnterInfo);
			setState(31); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(30);
				match(TestoInformazione);
				}
				}
				setState(33); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==TestoInformazione );
			setState(35);
			match(ExitInfo);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CollegamentoContext extends ParserRuleContext {
		public TerminalNode EnterCollegamento() { return getToken(GeneraleParser.EnterCollegamento, 0); }
		public TerminalNode ExitCollegamento() { return getToken(GeneraleParser.ExitCollegamento, 0); }
		public ImageContext image() {
			return getRuleContext(ImageContext.class,0);
		}
		public List<TerminalNode> CollegamentoTestoGenerico() { return getTokens(GeneraleParser.CollegamentoTestoGenerico); }
		public TerminalNode CollegamentoTestoGenerico(int i) {
			return getToken(GeneraleParser.CollegamentoTestoGenerico, i);
		}
		public CollegamentoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_collegamento; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GeneraleParserListener ) ((GeneraleParserListener)listener).enterCollegamento(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GeneraleParserListener ) ((GeneraleParserListener)listener).exitCollegamento(this);
		}
	}

	public CollegamentoContext collegamento() throws RecognitionException {
		CollegamentoContext _localctx = new CollegamentoContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_collegamento);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(37);
			match(EnterCollegamento);
			setState(39);
			_la = _input.LA(1);
			if (_la==CollegamentoImage) {
				{
				setState(38);
				image();
				}
			}

			setState(42); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(41);
				match(CollegamentoTestoGenerico);
				}
				}
				setState(44); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==CollegamentoTestoGenerico );
			setState(46);
			match(ExitCollegamento);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ImageContext extends ParserRuleContext {
		public TerminalNode CollegamentoImage() { return getToken(GeneraleParser.CollegamentoImage, 0); }
		public ImageContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_image; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GeneraleParserListener ) ((GeneraleParserListener)listener).enterImage(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GeneraleParserListener ) ((GeneraleParserListener)listener).exitImage(this);
		}
	}

	public ImageContext image() throws RecognitionException {
		ImageContext _localctx = new ImageContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_image);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(48);
			match(CollegamentoImage);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TestoContext extends ParserRuleContext {
		public TerminalNode Text() { return getToken(GeneraleParser.Text, 0); }
		public TerminalNode NEWLINE() { return getToken(GeneraleParser.NEWLINE, 0); }
		public TestoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_testo; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GeneraleParserListener ) ((GeneraleParserListener)listener).enterTesto(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GeneraleParserListener ) ((GeneraleParserListener)listener).exitTesto(this);
		}
	}

	public TestoContext testo() throws RecognitionException {
		TestoContext _localctx = new TestoContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_testo);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(50);
			_la = _input.LA(1);
			if ( !(_la==NEWLINE || _la==Text) ) {
			_errHandler.recoverInline(this);
			} else {
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ElencoContext extends ParserRuleContext {
		public TerminalNode Elenco() { return getToken(GeneraleParser.Elenco, 0); }
		public List<InformazioneContext> informazione() {
			return getRuleContexts(InformazioneContext.class);
		}
		public InformazioneContext informazione(int i) {
			return getRuleContext(InformazioneContext.class,i);
		}
		public List<TestoContext> testo() {
			return getRuleContexts(TestoContext.class);
		}
		public TestoContext testo(int i) {
			return getRuleContext(TestoContext.class,i);
		}
		public List<CollegamentoContext> collegamento() {
			return getRuleContexts(CollegamentoContext.class);
		}
		public CollegamentoContext collegamento(int i) {
			return getRuleContext(CollegamentoContext.class,i);
		}
		public List<GrassettoContext> grassetto() {
			return getRuleContexts(GrassettoContext.class);
		}
		public GrassettoContext grassetto(int i) {
			return getRuleContext(GrassettoContext.class,i);
		}
		public List<CorsivoContext> corsivo() {
			return getRuleContexts(CorsivoContext.class);
		}
		public CorsivoContext corsivo(int i) {
			return getRuleContext(CorsivoContext.class,i);
		}
		public List<CorsivoGrassettoContext> corsivoGrassetto() {
			return getRuleContexts(CorsivoGrassettoContext.class);
		}
		public CorsivoGrassettoContext corsivoGrassetto(int i) {
			return getRuleContext(CorsivoGrassettoContext.class,i);
		}
		public TerminalNode NEWLINE() { return getToken(GeneraleParser.NEWLINE, 0); }
		public TerminalNode EOF() { return getToken(GeneraleParser.EOF, 0); }
		public ElencoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_elenco; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GeneraleParserListener ) ((GeneraleParserListener)listener).enterElenco(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GeneraleParserListener ) ((GeneraleParserListener)listener).exitElenco(this);
		}
	}

	public ElencoContext elenco() throws RecognitionException {
		ElencoContext _localctx = new ElencoContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_elenco);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(52);
			match(Elenco);
			setState(61);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,6,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					setState(59);
					switch (_input.LA(1)) {
					case EnterInfo:
						{
						setState(53);
						informazione();
						}
						break;
					case NEWLINE:
					case Text:
						{
						setState(54);
						testo();
						}
						break;
					case EnterCollegamento:
						{
						setState(55);
						collegamento();
						}
						break;
					case Grassetto:
						{
						setState(56);
						grassetto();
						}
						break;
					case Corsivo:
						{
						setState(57);
						corsivo();
						}
						break;
					case CorsivoGrassetto:
						{
						setState(58);
						corsivoGrassetto();
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					} 
				}
				setState(63);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,6,_ctx);
			}
			setState(65);
			switch ( getInterpreter().adaptivePredict(_input,7,_ctx) ) {
			case 1:
				{
				setState(64);
				_la = _input.LA(1);
				if ( !(_la==EOF || _la==NEWLINE) ) {
				_errHandler.recoverInline(this);
				} else {
					consume();
				}
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class GrassettoContext extends ParserRuleContext {
		public List<TerminalNode> Grassetto() { return getTokens(GeneraleParser.Grassetto); }
		public TerminalNode Grassetto(int i) {
			return getToken(GeneraleParser.Grassetto, i);
		}
		public List<TestoContext> testo() {
			return getRuleContexts(TestoContext.class);
		}
		public TestoContext testo(int i) {
			return getRuleContext(TestoContext.class,i);
		}
		public List<InformazioneContext> informazione() {
			return getRuleContexts(InformazioneContext.class);
		}
		public InformazioneContext informazione(int i) {
			return getRuleContext(InformazioneContext.class,i);
		}
		public List<CollegamentoContext> collegamento() {
			return getRuleContexts(CollegamentoContext.class);
		}
		public CollegamentoContext collegamento(int i) {
			return getRuleContext(CollegamentoContext.class,i);
		}
		public GrassettoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_grassetto; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GeneraleParserListener ) ((GeneraleParserListener)listener).enterGrassetto(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GeneraleParserListener ) ((GeneraleParserListener)listener).exitGrassetto(this);
		}
	}

	public GrassettoContext grassetto() throws RecognitionException {
		GrassettoContext _localctx = new GrassettoContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_grassetto);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(67);
			match(Grassetto);
			setState(71); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				setState(71);
				switch (_input.LA(1)) {
				case NEWLINE:
				case Text:
					{
					setState(68);
					testo();
					}
					break;
				case EnterInfo:
					{
					setState(69);
					informazione();
					}
					break;
				case EnterCollegamento:
					{
					setState(70);
					collegamento();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(73); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << EnterInfo) | (1L << EnterCollegamento) | (1L << NEWLINE) | (1L << Text))) != 0) );
			setState(75);
			match(Grassetto);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CorsivoContext extends ParserRuleContext {
		public List<TerminalNode> Corsivo() { return getTokens(GeneraleParser.Corsivo); }
		public TerminalNode Corsivo(int i) {
			return getToken(GeneraleParser.Corsivo, i);
		}
		public List<TestoContext> testo() {
			return getRuleContexts(TestoContext.class);
		}
		public TestoContext testo(int i) {
			return getRuleContext(TestoContext.class,i);
		}
		public List<InformazioneContext> informazione() {
			return getRuleContexts(InformazioneContext.class);
		}
		public InformazioneContext informazione(int i) {
			return getRuleContext(InformazioneContext.class,i);
		}
		public List<CollegamentoContext> collegamento() {
			return getRuleContexts(CollegamentoContext.class);
		}
		public CollegamentoContext collegamento(int i) {
			return getRuleContext(CollegamentoContext.class,i);
		}
		public CorsivoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_corsivo; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GeneraleParserListener ) ((GeneraleParserListener)listener).enterCorsivo(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GeneraleParserListener ) ((GeneraleParserListener)listener).exitCorsivo(this);
		}
	}

	public CorsivoContext corsivo() throws RecognitionException {
		CorsivoContext _localctx = new CorsivoContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_corsivo);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(77);
			match(Corsivo);
			setState(81); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				setState(81);
				switch (_input.LA(1)) {
				case NEWLINE:
				case Text:
					{
					setState(78);
					testo();
					}
					break;
				case EnterInfo:
					{
					setState(79);
					informazione();
					}
					break;
				case EnterCollegamento:
					{
					setState(80);
					collegamento();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(83); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << EnterInfo) | (1L << EnterCollegamento) | (1L << NEWLINE) | (1L << Text))) != 0) );
			setState(85);
			match(Corsivo);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CorsivoGrassettoContext extends ParserRuleContext {
		public List<TerminalNode> CorsivoGrassetto() { return getTokens(GeneraleParser.CorsivoGrassetto); }
		public TerminalNode CorsivoGrassetto(int i) {
			return getToken(GeneraleParser.CorsivoGrassetto, i);
		}
		public List<TestoContext> testo() {
			return getRuleContexts(TestoContext.class);
		}
		public TestoContext testo(int i) {
			return getRuleContext(TestoContext.class,i);
		}
		public List<InformazioneContext> informazione() {
			return getRuleContexts(InformazioneContext.class);
		}
		public InformazioneContext informazione(int i) {
			return getRuleContext(InformazioneContext.class,i);
		}
		public List<CollegamentoContext> collegamento() {
			return getRuleContexts(CollegamentoContext.class);
		}
		public CollegamentoContext collegamento(int i) {
			return getRuleContext(CollegamentoContext.class,i);
		}
		public CorsivoGrassettoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_corsivoGrassetto; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GeneraleParserListener ) ((GeneraleParserListener)listener).enterCorsivoGrassetto(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GeneraleParserListener ) ((GeneraleParserListener)listener).exitCorsivoGrassetto(this);
		}
	}

	public CorsivoGrassettoContext corsivoGrassetto() throws RecognitionException {
		CorsivoGrassettoContext _localctx = new CorsivoGrassettoContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_corsivoGrassetto);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(87);
			match(CorsivoGrassetto);
			setState(91); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				setState(91);
				switch (_input.LA(1)) {
				case NEWLINE:
				case Text:
					{
					setState(88);
					testo();
					}
					break;
				case EnterInfo:
					{
					setState(89);
					informazione();
					}
					break;
				case EnterCollegamento:
					{
					setState(90);
					collegamento();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(93); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << EnterInfo) | (1L << EnterCollegamento) | (1L << NEWLINE) | (1L << Text))) != 0) );
			setState(95);
			match(CorsivoGrassetto);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static final ATN _ATN =
		new ATNDeserializer().deserialize(_serializedATN.toCharArray());
	static {
		_decisionToDFA = new DFA[_ATN.getNumberOfDecisions()];
		for (int i = 0; i < _ATN.getNumberOfDecisions(); i++) {
			_decisionToDFA[i] = new DFA(_ATN.getDecisionState(i), i);
		}
	}
}
